--- a/live.html
+++ b/live.html
@@ -364,6 +364,14 @@
         <div class="card">
           <h2 style="margin-top:0;">Таблиця зважувань</h2>
 
+          <div class="bf-toggle" style="margin-top:10px;">
+  <button class="btn btn--accent" id="wBtn1">W1</button>
+  <button class="btn btn--ghost"  id="wBtn2">W2</button>
+  <button class="btn btn--ghost"  id="wBtn3">W3</button>
+  <button class="btn btn--ghost"  id="wBtn4">W4</button>
+  <span id="weighInfo" class="form__hint" style="margin-left:auto;">W1 — зважування</span>
+          </div>
+
           <div class="table-wrap" style="overflow-x:auto;">
             <table class="table table-sm" id="totalTable">
               <thead>
