--- a/live.html
+++ b/live.html
@@ -369,9 +369,11 @@
   <button class="btn btn--ghost"  id="wBtn2">W2</button>
   <button class="btn btn--ghost"  id="wBtn3">W3</button>
   <button class="btn btn--ghost"  id="wBtn4">W4</button>
-  <span id="weighInfo" class="form__hint" style="margin-left:auto;">W1 — зважування</span>
-          </div>
+  <span id="weighInfo" class="form__hint" style="margin-left:auto;">перегляд зважування</span>
+    </div>
 
+
+          
           <div class="table-wrap" style="overflow-x:auto;">
             <table class="table table-sm" id="totalTable">
               <thead>
