--- a/live.html
+++ b/live.html
@@ -364,7 +364,7 @@
         <div class="card">
           <h2 style="margin-top:0;">Таблиця зважувань</h2>
 
-          <div class="bf-toggle" style="margin-top:18px;">
+          <div class="bf-toggle" style="margin-top:18px;margin-bottom:12px">
   <button class="btn btn--accent" id="wBtn1">W1</button>
   <button class="btn btn--ghost"  id="wBtn2">W2</button>
   <button class="btn btn--ghost"  id="wBtn3">W3</button>
