--- a/live.html
+++ b/live.html
@@ -375,7 +375,7 @@
 
           
           <div class="table-wrap" style="overflow-x:auto;">
-            <table id="totalTable">
+            <table class="table-sm" id="totalTable">
               <thead>
                 <tr>
                   <th>Зона</th>
