--- a/live.html
+++ b/live.html
@@ -288,6 +288,44 @@
   .table th, .table td{ border-color: rgba(255,255,255,.08) !important; }
   .table th{ background: rgba(255,255,255,.04) !important; }
   .table tr:nth-child(even){ background: rgba(255,255,255,.02) !important; }
+  
+/* ===============================
+   LIVE — РАМКА ЗОНИ ВПРИТУЛ
+   =============================== */
+
+/* Велика рамка (Зони A / B / C) */
+.live-left > .card{
+  padding: 10px !important;
+}
+
+/* СІТКА ЗОН — БЕЗ ВІДСТУПІВ */
+.live-zones-grid{
+  gap: 0 !important;
+}
+
+/* РАМКА ЗОНИ — ВПРИТУЛ */
+.live-zone.card{
+  margin: 0 !important;
+  border-radius: 14px !important;
+}
+
+/* Заголовок зони */
+.live-zone-title{
+  margin: 4px 0 !important;
+}
+
+/* Таблиця всередині — без зайвих відступів */
+.live-zone .table-wrap{
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+/* Таблиця займає ВСЮ ширину */
+.live-zone table{
+  width: 100% !important;
+  table-layout: fixed !important;
+}
+    
   </style>
 </head>
 
